# euler-simulation

./: .gitignore  CMakeLists.txt  README.md
include/: euler.h  save_data.h
src/: euler.cpp  main.cpp  sava_data.cpp  save_data.cpp  viz.py
